--- a/src/app/pages/singUp/signup.component.html
+++ b/src/app/pages/singUp/signup.component.html
@@ -5,7 +5,7 @@
             <p>Completa tus datos para registrarte</p>
         </div>
 
-        <form class="signup-form">
+        <form [formGroup]="actorForm" class="signup-form">
             <div class="form-group">
                 <label for="name">Nombre completo</label>
                 <input 
@@ -13,28 +13,39 @@
                     id="name" 
                     name="name" 
                     placeholder="Ingresa tu nombre completo"
+                    class="form-control"
+                    [class.error]="actorForm.get('name')?.invalid && actorForm.get('name')?.touched"
+                    formControlName="name"
                     required
-                    [value]="name()"
-                    (input)="name.set(txtname.value)"
-                    #txtname
                 >
+
+                @if (actorForm.get('name')?.hasError('required') && actorForm.get('name')?.touched) {
+                    <div class="error">El nombre es obligatorio.</div>
+                }
             </div>
 
-            <div class="form-group">
+            <div [formGroup]="actorForm" class="form-group">
                 <label for="email">Correo electrónico</label>
                 <input 
                     type="email" 
                     id="email" 
-                    name="email" 
+                    name="email"
+                    class="form-control"
+                    [class.error]="actorForm.get('email')?.invalid && actorForm.get('email')?.touched"
+                    formControlName="email" 
                     placeholder="ejemplo@correo.com"
                     required
-                    [value]="email()"
-                    (input)="email.set(txtemail.value)"
-                    #txtemail
                 >
+
+                @if (actorForm.get('email')?.hasError('required') && actorForm.get('email')?.touched) {
+                    <div class="error">El email es obligatorio.</div>
+                }
+                @if (actorForm.get('email')?.hasError('email') && actorForm.get('email')?.touched) {
+                    <div class="error">Ingrese un email válido</div>
+                }
             </div>
 
-            <div class="form-row">
+            <div [formGroup]="actorForm" class="form-row">
                 <div class="form-group">
                     <label for="password">Contraseña</label>
                     <input 
@@ -42,22 +53,48 @@
                         id="password" 
                         name="password" 
                         placeholder="Mínimo 8 caracteres"
+                        class="form-control"
+                        [class.error]="actorForm.get('password')?.invalid && actorForm.get('password')?.touched"
+                        formControlName="password"
                         required
                     >
+
+                    @if (actorForm.get('password')?.hasError('required') && actorForm.get('password')?.touched) {
+                        <div class="error">La contraseña es obligatoria.</div>
+                    }
+                    @if (actorForm.get('password')?.hasError('pattern') && actorForm.get('password')?.touched) {
+                        <div class="error">La contraseña debe tener al menos una mayúscula y un número</div>
+                    }
+                    @if (actorForm.get('password')?.hasError('minlength') && actorForm.get('password')?.touched) {
+                        <div class="error">La contraseña debe tener al menos 8 caracteres</div>
+                    }
+                    @if(!actorForm.get('password')?.errors){
                     <div class="password-hint">
-                        Debe contener al menos 8 caracteres y 1 número
+                        Debe contener al menos 8 caracteres, 1 mayúscula y 1 número
                     </div>
+                    }
+                    
                 </div>
 
-                <div class="form-group">
+                <div [formGroup]="actorForm" class="form-group">
                     <label for="confirmPassword">Confirmar contraseña</label>
                     <input 
                         type="password" 
                         id="confirmPassword" 
                         name="confirmPassword" 
                         placeholder="Confirma tu contraseña"
+                        class="form-control"
+                        [class.error]="actorForm.get('confirmPassword')?.invalid && actorForm.get('confirmPassword')?.touched"
+                        formControlName="confirmPassword"
                         required
                     >
+
+                    @if (actorForm.get('confirmPassword')?.hasError('required') && actorForm.get('confirmPassword')?.touched) {
+                        <div class="error">La confirmación de contraseña es obligatoria.</div>
+                    }
+                    @if (actorForm.get('confirmPassword')?.hasError('fieldsNotMatch') && actorForm.get('confirmPassword')?.touched) {
+                        <div class="error">Las contraseñas no coinciden.</div>
+                    }
                 </div>
             </div>
 
@@ -68,7 +105,7 @@
                 </label>
             </div> -->
 
-            <button (click)="registrar()" type="button" class="submit-btn">
+            <button (click)="registrar()" type="button" class="submit-btn" [disabled]="actorForm.invalid || actorForm.pending">
                 Crear Cuenta
             </button>
         </form>
