creation of dashboard component; changes in logout's logic and interceptor's implementation; use of roles user/admin

--- a/src/app/pages/logIn/login.component.html
+++ b/src/app/pages/logIn/login.component.html
@@ -37,6 +37,17 @@
                 }
             </div>
 
+            <div class="form-group checkbox-group">
+                <label class="checkbox-label">
+                    <input 
+                        type="checkbox" 
+                        formControlName="isAdminLogin"
+                    >
+                    <span class="checkmark"></span>
+                    Iniciar sesión como administrador
+                </label>
+            </div>
+
             <!-- <div class="forgot-password">
                 <a href="#">¿Olvidaste tu contraseña?</a>
             </div> -->
