implementation of expired session. detele console.logs for verification

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,10 @@
 <div class="dashboard-container">
 
+  <!-- Modal Session Expired -->
+   @if(showSessionModal()){
+    <app-session-expired-modal (ok)="confirmSessionExpired()"></app-session-expired-modal>
+   }
+
   <!-- Header -->
   <header class="dashboard-header">
     <h1>Dashboard</h1>
